plugins {
    alias(libs.plugins.axion.release)
    alias(libs.plugins.nmcp.aggregation)
}

scmVersion {
    tag {
        prefix = 'v'
    }
    checks {
        uncommittedChanges = false
        aheadOfRemote = false
        snapshotDependencies = false
    }
}

allprojects {
    group = 'ai.pipestream'
    version = findProperty('publishVersion') ?: rootProject.scmVersion.version
}

// The nmcp aggregation resolves its nmcp-tasks runtime from the root project.
repositories {
    mavenCentral()
}

// Maven Central Portal upload (org-wide credentials; releases are triggered by
// the release-and-publish workflow). Aggregates every subproject's publications
// into one portal deployment.
nmcpAggregation {
    centralPortal {
        username = providers.environmentVariable('MAVEN_CENTRAL_USERNAME')
        password = providers.environmentVariable('MAVEN_CENTRAL_PASSWORD')
        publishingType = 'AUTOMATIC'
    }
    publishAllProjectsProbablyBreakingProjectIsolation()
}

tasks.register('bufLint', Exec) {
    group = 'verification'
    description = 'Run buf lint (STANDARD) on Pipestream protobuf standards'
    workingDir = rootDir
    commandLine 'buf', 'lint'
    inputs.files(fileTree(rootDir) {
        include 'buf.yaml'
        include '**/src/main/proto/**/*.proto'
        include '**/src/test/proto/**/*.proto'
        exclude '**/build/**'
    })
}

tasks.register('check') {
    group = 'verification'
    dependsOn('bufLint')
}

// Central Portal validates license, developers, and scm on every pom.
ext.commonPomMetadata = { pom ->
    pom.url = 'https://github.com/ai-pipestream/protomolt'
    pom.licenses {
        license {
            name = 'Apache License, Version 2.0'
            url = 'https://www.apache.org/licenses/LICENSE-2.0'
        }
    }
    pom.developers {
        developer {
            id = 'krickert'
            email = 'krickert@pipestream.ai'
        }
    }
    pom.scm {
        connection = 'scm:git:https://github.com/ai-pipestream/protomolt.git'
        developerConnection = 'scm:git:ssh://git@github.com/ai-pipestream/protomolt.git'
        url = 'https://github.com/ai-pipestream/protomolt'
    }
}

subprojects {
    repositories {
        mavenLocal()
        // The experimental Lucene and OpenNLP forks (ai.pipestream:lucene-*, opennlp-*) are the
        // only dependencies not on Maven Central. They resolve from Central's snapshot
        // repository, which every runner can reach; the ai.pipestream Forgejo registry stays as
        // a fallback for a clean checkout before a fresh fork snapshot has propagated. Both are
        // scoped to exactly the forks: without the filter, every dependency in the build would
        // be looked up here first, and a slow or (from GitHub-hosted runners) unreachable host
        // would fail resolution at configuration time.
        maven {
            url = 'https://central.sonatype.com/repository/maven-snapshots'
            content {
                includeModuleByRegex('ai\\.pipestream', 'lucene-.*')
                includeModuleByRegex('ai\\.pipestream', 'opennlp(-.*)?')
            }
        }
        maven {
            url = 'https://git.rokkon.com/api/packages/ai-pipestream/maven'
            content {
                includeModuleByRegex('ai\\.pipestream', 'lucene-.*')
                includeModuleByRegex('ai\\.pipestream', 'opennlp(-.*)?')
            }
        }
        mavenCentral()
    }

    if (project.name == 'bom') {
        apply plugin: 'java-platform'
        apply plugin: 'version-catalog'
    } else {
        apply plugin: 'java-library'

        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(25)
            }
        }

        // Library baseline is JDK 25: compile against the 25 API and emit 25 bytecode.
        // Set before the first release, while no published artifact constrains it; raising
        // it after v0.1.0 would break every consumer already on the older line.
        tasks.withType(JavaCompile).configureEach {
            options.release = 25
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            maxParallelForks = Math.max(1, Runtime.runtime.availableProcessors().intdiv(2))
        }

        // -PtestJdk=NN runs every test JVM on that Java version, proving a runtime
        // baseline actually works - compiling with --release alone does not. Kept for
        // checking against JDKs newer than the baseline.
        if (findProperty('testJdk')) {
            tasks.withType(Test).configureEach {
                javaLauncher = javaToolchains.launcherFor {
                    languageVersion = JavaLanguageVersion.of(
                            Integer.parseInt(findProperty('testJdk').toString()))
                }
            }
        }

        // Generated protobuf sources have no javadoc tags; keep doclint useful but quiet.
        tasks.withType(Javadoc).configureEach {
            options.addStringOption('Xdoclint:all,-missing', '-quiet')
        }

        if (project.name != 'samples') {
            dependencies {
                testImplementation platform(libs.junit.bom)
                testImplementation libs.junit.jupiter
                testImplementation libs.assertj.core
                testRuntimeOnly libs.junit.platform.launcher
            }
        }
    }

    if (!['samples', 'protomolt-system-tests'].contains(project.name)) {
        apply plugin: 'maven-publish'
        apply plugin: 'signing'

        if (project.name != 'bom') {
            java {
                withSourcesJar()
                withJavadocJar()
            }
        }

        publishing {
            repositories {
                // Snapshots publish to the ai.pipestream dev registry; releases go to
                // Maven Central via nmcp. Mirrors the platform convention.
                def forgejoToken = System.getenv('FORGEJO_TOKEN')
                if (version.toString().endsWith('-SNAPSHOT') && forgejoToken) {
                    maven {
                        name = 'Registry'
                        url = uri('https://git.rokkon.com/api/packages/ai-pipestream/maven')
                        credentials {
                            username = System.getenv('FORGEJO_ACTOR') ?: 'ci'
                            password = forgejoToken
                        }
                    }
                }
            }
            publications {
                create('maven', MavenPublication) {
                    if (project.name == 'bom') {
                        from components.javaPlatform
                        artifactId = 'protomolt-bom'
                    } else {
                        from components.java
                    }
                    pom {
                        name = project.name == 'bom'
                            ? 'ProtoMolt BOM'
                            : project.name
                        // Lazy: module build scripts set `description` after this block runs.
                        description = providers.provider { project.description ?: 'ProtoMolt protobuf tooling' }
                        commonPomMetadata(it)
                    }
                }
                if (project.name == 'bom') {
                    create('catalog', MavenPublication) {
                        from components.versionCatalog
                        artifactId = 'protomolt-bom-catalog'
                        pom {
                            name = 'ProtoMolt BOM Catalog'
                            description = 'Gradle version catalog for ProtoMolt protobuf tools'
                            commonPomMetadata(it)
                        }
                    }
                }
            }
        }

        signing {
            def signingKey = System.getenv('GPG_PRIVATE_KEY')
            def signingPassword = System.getenv('GPG_PASSPHRASE')
            required { signingKey != null }
            if (signingKey) {
                useInMemoryPgpKeys(signingKey, signingPassword)
                sign publishing.publications
            }
        }
    }
}
